[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pytigon-lib"
version = "0.260713"
description = "Pytigon library — Python/Django application framework with multi-format rendering and indentation-based HTML preprocessor"
authors = [{name = "Slawomir Cholaj", email = "slawomir.cholaj@gmail.com"}]
license = "LGPL-3.0-only"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=6.0",
    "django-environ>=0.10",
    "rules>=3.5",
    "lxml>=4.6",
    "fsspec>=2024.0",
    "httpx>=0.20",
    "cryptography>=3.4",
    "fpdf2>=2.5",
    "Pillow>=9.0",
    "python-docx>=0.8",
    "htmldocx",
    "xlsxwriter>=3.0",
    "openpyxl>=3.0",
    "markdown>=3.3",
    "pyquery>=1.4",
    "python-dateutil>=2.8",
    "autobahn>=22.0",
    "pyexcel>=0.7", 
    "pyexcel-xlsx>=0.6", 
    "pyexcel-ods3>=0.6",
    "llvmlite>=0.40",
    "plotly>=5.0", 
    "numpy>=1.20",
    "pscript>=0.7",
    "svglib>=1.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.3", "pytest>=7.0", "pytest-django>=4.5"]

[project.urls]
Documentation = "https://pytigon.github.io/pytigon-lib"
Repository = "https://github.com/Splawik/pytigon-lib"

[tool.setuptools.packages.find]
where = ["."]
include = ["pytigon_lib*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "SIM", "RUF"]
ignore = [
    "SIM102", "SIM105", "SIM108", "SIM115",
    "SIM116", "SIM117", "SIM118",
    "RUF002", "RUF003", "RUF005", "RUF012", "RUF059",
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F403", "F405"]
"tests/schindent/assets/*.py" = ["F821"]
"tests/schindent/test2.py" = ["F821"]
"tests/schindent/test.py" = ["E402"]
"tests/schhttptools/test2.py" = ["E501"]
"tests/schtools/wiki_test.py" = ["E501"]
"pytigon_lib/schhtml/html_tags.py" = ["F403"]
"pytigon_lib/schfs/__init__.py" = ["F401"]
"pytigon_lib/schparser/parser.py" = ["UP045"]

[tool.pytest.ini_options]
norecursedirs = ["tests/schindent/assets"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = [
    "--ignore-glob=**/android_client.py",
    "-m", "not django",
    "--ignore=tests/schdjangoext",
    "--ignore=tests/schviews",
    "--ignore=tests/schhttptools/test.py",
    "--ignore=tests/schhttptools/test2.py",
    "--ignore=tests/schindent/test.py",
    "--ignore=tests/schindent/test2.py",
    "--ignore=tests/schindent/ihtml2html_test.py",
    "--ignore=tests/schhtml/gen_pdf_test.py",
    "--ignore=tests/schspreadsheet/gen_doc_test.py",
    "--ignore=tests/schfs/schfs__init___test.py",
    "--ignore=tests/schfs/vfstools_test.py",
    "--ignore=tests/schtools/encrypt_test.py",
    "--ignore=tests/schtools/schhtmlgen_test.py",
    "--ignore=tests/schtools/wiki_test.py",
    "--ignore=tests/__init___test.py",
    "--ignore=tests/schhtml/pdfdc_test.py",
]
markers = [
    "django: tests requiring Django setup (run from pytigon parent project)",
]
